samples/_failures_safe/1761244157_d52a26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_073c9e70.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_073c9e70.c:154:9: error: expected expression at end of input
  154 |         case
      |         ^~~~
./samples/SAFE/__tmp_073c9e70.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_073c9e70.c:154:9: error: expected declaration or statement at end of input
